--- a/nQA.Web/Views/Account/Login.cshtml
+++ b/nQA.Web/Views/Account/Login.cshtml
@@ -1,40 +1,39 @@
 ﻿@model nQA.Web.Models.LoginModel
-
-@{
-    ViewBag.Title = "Log in";
-}
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Use this form to enter your user name and password.</h2>
-</hgroup>
-
-@using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
-    @Html.ValidationSummary(true, "Log in was unsuccessful. Please correct the errors and try again.")
+@using (Html.BeginForm("Login", "Account", FormMethod.Post, new { id = "openid_form" }))
+{
+    @Html.ValidationSummary(true)
+    <input type="hidden" name="action" value="verify" />
 
     <fieldset>
-        <legend>Log in Form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
-            </li>
-            <li>
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
-            </li>
-        </ol>
-        <input type="submit" value="Log in" />
+        <legend>Sign-in or Create New Account</legend>
+        <div id="openid_choice">
+            <p>
+                Please click your account provider:</p>
+            <div id="openid_btns">
+            </div>
+        </div>
+        <div id="openid_input_area">
+            <input id="openid_identifier" name="openid_identifier" type="text" value="http://" />
+            <input id="openid_submit" type="submit" value="Sign-In" />
+        </div>
+        <noscript>
+            <p>
+                OpenID is service that allows you to log-on to many different websites using a single
+                indentity. Find out <a href="http://openid.net/what/">more about OpenID</a> and
+                <a href="http://openid.net/get/">how to get an OpenID enabled account</a>.</p>
+        </noscript>
     </fieldset>
-    <p>
-        @Html.ActionLink("Register", "Register") if you don't have an account.
-    </p>
 }
-
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <link href="@Url.Content("~/Content/openid-selector/openid-shadow.css")" type="text/css" rel="stylesheet"/>
+    <link href="@Url.Content("~/Content/openid-selector/openid.css")" type="text/css" rel="stylesheet"/>
+    <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/openid-jquery.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/openid-en.js")" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            openid.init('openid_identifier');
+        });
+	</script>
 }
